Được tạo bằng Colaboratory

--- a/Chuong_3.ipynb
+++ b/Chuong_3.ipynb
@@ -6,7 +6,7 @@
       "private_outputs": true,
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPPBcrinjJ1OKuW2Atc/D9z",
+      "authorship_tag": "ABX9TyM9jkdxjTpSso4prh//1nJM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -725,6 +725,450 @@
       ],
       "metadata": {
         "id": "kCZU3jZSiA0d"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#4. Bài toán ứng dụng 1 – Căn bản về mật mã học, mã hóa thông tin, mật khẩu"
+      ],
+      "metadata": {
+        "id": "r62UJPRUDuFT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy import linalg\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "Bf45hdVZDzZs"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E = np.array([ [1, -2, 2], [-1, 1, 3], [1, -1, -4] ])\n",
+        "E"
+      ],
+      "metadata": {
+        "id": "7wO9NZJNEbPw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "KHO = np.matrix([13,11,17])\n",
+        "kq_KHO = KHO.dot(E)\n",
+        "kq_KHO"
+      ],
+      "metadata": {
+        "id": "XSULcJavFA7f"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A_H = np.matrix([1, 0, 11])\n",
+        "kq_A_H = A_H.dot(E)\n",
+        "kq_A_H"
+      ],
+      "metadata": {
+        "id": "JjqA40xdFQv-"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "O_C = np.matrix([17, 34, 5])\n",
+        "kq_O_C = O_C.dot(E)\n",
+        "kq_O_C"
+      ],
+      "metadata": {
+        "id": "Mb1ZFS0AF1d8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "_DƯ = np.matrix([0, 6, 26])\n",
+        "kq_DƯ = _DƯ.dot(E)\n",
+        "kq_DƯ"
+      ],
+      "metadata": {
+        "id": "iMkhuvppF9de"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = np.matrix([33, 0, 14])\n",
+        "kq_L = L.dot(E)\n",
+        "kq_L"
+      ],
+      "metadata": {
+        "id": "5ykxsaPwGREX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "IÊ = np.matrix([12, 9, 34])\n",
+        "kq_IÊ = IÊ.dot(E)\n",
+        "kq_IÊ"
+      ],
+      "metadata": {
+        "id": "087k85X0Ghck"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "U = np.matrix([25,35,35])\n",
+        "kq_U = U.dot(E)\n",
+        "kq_U"
+      ],
+      "metadata": {
+        "id": "rBydz4LRG4lb"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "E_ = linalg.inv(E)\n",
+        "E_"
+      ],
+      "metadata": {
+        "id": "8A-KmM67HGO4"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Giải mã:\n",
+        "kq_KHO.dot(E_)"
+      ],
+      "metadata": {
+        "id": "mvQU8Jp3HSKB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_A_H.dot(E_)"
+      ],
+      "metadata": {
+        "id": "SwXhaFfIJBI1"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_O_C.dot(E_)"
+      ],
+      "metadata": {
+        "id": "mpgfaQtjJHXL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_DƯ.dot(E_)"
+      ],
+      "metadata": {
+        "id": "pyB5vXoCJMsj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_L.dot(E_)"
+      ],
+      "metadata": {
+        "id": "yorvicWmJSPy"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_IÊ.dot(E_)"
+      ],
+      "metadata": {
+        "id": "F5DWThqEJVRq"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_U.dot(E_)"
+      ],
+      "metadata": {
+        "id": "l7QE7P7YJYmZ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Bai_tap_chuong_1:\n",
+        "#Cau_1: Hãy viết chương trình bằng Python hoặc sử dụng thư viện numpy/sympy để: "
+      ],
+      "metadata": {
+        "id": "vFgaHRDjJc4t"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#a: Tự chọn một ma trận khả nghịch 3x3. Sinh viên chứng minh ma trận đó khả nghịch (tồn\n",
+        "#tại ma trận nghịch đảo)"
+      ],
+      "metadata": {
+        "id": "6O-5Yc_SLYmR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from scipy import linalg\n",
+        "import numpy as np"
+      ],
+      "metadata": {
+        "id": "cQ_EzvBbLcSC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A = np.array([ [-2, 1, 2], [1, -1, 3], [-1, 1, -4] ])\n",
+        "A"
+      ],
+      "metadata": {
+        "id": "qR4as56xLg0T"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "A_ = linalg.inv(A)\n",
+        "A_"
+      ],
+      "metadata": {
+        "id": "wDOc-YuYLzrt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Nhập họ và tên hoặc mã số sinh viên (của sinh viên). \n",
+        "#Chuoi can ma hoa:     P  H  A  .  M  Q  U  Ô  '  C  C  H  Ư  Ơ  N  G\n",
+        "#Chuoi so tuong ung:   20 11 01 34 15 21 25 19 30 05 05 11 26 18 16 10"
+      ],
+      "metadata": {
+        "id": "p1rYZCT4M7zr"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "PHA = np.matrix([20, 11, 1])\n",
+        "kq_1 = PHA.dot(A)\n",
+        "kq_1"
+      ],
+      "metadata": {
+        "id": "1yiT_z0gOyWk"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "MQ = np.matrix([34, 15, 21])\n",
+        "kq_2 = MQ.dot(A)\n",
+        "kq_2"
+      ],
+      "metadata": {
+        "id": "a4kAVnlcPLAv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "UÔ = np.matrix([25, 19, 30])\n",
+        "kq_3 = UÔ.dot(A)\n",
+        "kq_3"
+      ],
+      "metadata": {
+        "id": "k94foWgpPaeU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "CCH = np.matrix([5, 5, 11])\n",
+        "kq_4 = CCH.dot(A)\n",
+        "kq_4"
+      ],
+      "metadata": {
+        "id": "FHAS-uoIPsnj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ƯƠN = np.matrix([26, 18, 16])\n",
+        "kq_5 = ƯƠN.dot(A)\n",
+        "kq_5"
+      ],
+      "metadata": {
+        "id": "6jKghEQxP3fj"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "G = np.matrix([10, 35, 35])\n",
+        "kq_6 = G.dot(A)\n",
+        "kq_6"
+      ],
+      "metadata": {
+        "id": "If9esSLNQJ24"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Giải mã"
+      ],
+      "metadata": {
+        "id": "af4wzZjOQU_n"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_1.dot(A_)"
+      ],
+      "metadata": {
+        "id": "un4jbitXQif7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_2.dot(A_)"
+      ],
+      "metadata": {
+        "id": "8htjpOrMQrfQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_3.dot(A_)"
+      ],
+      "metadata": {
+        "id": "zGjODSmUQuZB"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_4.dot(A_)"
+      ],
+      "metadata": {
+        "id": "Owux16iVQyy0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_5.dot(A_)"
+      ],
+      "metadata": {
+        "id": "2FfmYYKoQ09i"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kq_6.dot(A_)"
+      ],
+      "metadata": {
+        "id": "ql7nY1WPQ5_1"
       },
       "execution_count": null,
       "outputs": []
